Revert "fix: responsive alignments"
This reverts commit 8807b0ba3eb1324be935ed4a70c81d89f95069a1.

commited in wrong branch

--- a/src/pages/news/styles/feed-news-page.css
+++ b/src/pages/news/styles/feed-news-page.css
@@ -175,7 +175,6 @@ main h2 {
 @media (max-width: 964px) {
   main {
     max-width: unset;
-    width: 74.4444%;
   }
   .right-sidebar {
     display: none;
@@ -185,7 +184,6 @@ main h2 {
 @media (max-width: 450px) {
   main {
     padding: 75px 30px 30px 30px;
-    width: 100%;
     h2 {
       font-size: var(--font-size-2xl);
     }
